--- a/frontend/mgmg-project/src/assets/font/font.css
+++ b/frontend/mgmg-project/src/assets/font/font.css
@@ -1,4 +1,21 @@
 @font-face {
   font-family: "KyoboHandwriting2019";
   src: url("KyoboHandwriting2019.ttf") format("truetype");
+  font-weight: 100;
+}
+
+@font-face {
+  font-family: "Cafe24Oneprettynight";
+  src: url("@/assets/font/Cafe24Oneprettynight.ttf");
+}
+
+@font-face {
+  font-family: "강원교육모두";
+  src: url("강원교육모두Bold.otf");
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: "SeoulNamsanEB";
+  src: url("SeoulNamsanEB.ttf");
 }
