--- a/frontend/mgmg-project/src/styles/diary/DiaryStyle.css
+++ b/frontend/mgmg-project/src/styles/diary/DiaryStyle.css
@@ -123,9 +123,13 @@
   align-items: center;
 }
 
+.diarybottom > .customButton {
+  margin-bottom: 12px;
+}
+
 .microButton {
   position: fixed;
-  bottom: 6%;
+  bottom: 6.5%;
   right: 21%;
   width: 50px;
   height: 50px;
@@ -143,7 +147,7 @@
 }
 
 .v-icon {
-  color: beige;
+  color: white;
 }
 
 .offMike {
