--- a/frontend/mgmg-project/src/styles/diary/MusicRecommend.css
+++ b/frontend/mgmg-project/src/styles/diary/MusicRecommend.css
@@ -1,7 +1,7 @@
 .outDiv {
   background-color: rgba(255, 255, 255, 0.7);
   margin: 10px 0px;
-  padding: 20px;
+  padding: 30px;
 }
 
 .title {
@@ -50,16 +50,16 @@ iframe {
   justify-items: center;
 }
 
+.musicIcon {
+  width: 35%;
+}
+
 .musicInfo {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 10px 0px;
+  margin: 5px 0px 10px 0px;
   font-size: clamp(0.8rem, 2vw, 1.8rem) !important;
-}
-
-.musicIcon {
-  width: 35%;
 }
 
 .ridioButton {
@@ -78,7 +78,7 @@ iframe {
   border: 1px solid #636363;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   border-radius: 10px;
-  text-align: centerd;
+  text-align: center;
   cursor: pointer;
   margin: 0px 5px;
   color: #000000;
@@ -89,10 +89,6 @@ iframe {
   color: white;
   border: none;
   box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.ridioButton span {
-  font-size: clamp(0.5rem, 1.2vw, 1rem);
 }
 
 @media (max-width: 970px) {
