[FE/YS]Design: 일기상세 감정티콘 그림자 추가

--- a/frontend/mgmg-project/src/styles/diary/DiaryStyle.css
+++ b/frontend/mgmg-project/src/styles/diary/DiaryStyle.css
@@ -98,6 +98,7 @@ hr {
   max-width: 190px;
   width: 100%;
   height: auto;
+  filter: drop-shadow(3px 3px 3px rgb(133, 133, 133));
 }
 
 .textFlex {
