--- a/frontend/mgmg-project/src/styles/diary/GiftRecommend.css
+++ b/frontend/mgmg-project/src/styles/diary/GiftRecommend.css
@@ -19,10 +19,40 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
-.giftBoxDiv > img {
+.giftbox {
   width: 10vw;
+  animation-name: shaking;
+  animation-duration: 1s;
+  animation-iteration-count: 10;
+}
+
+.giftbox:hover {
+  animation: shaking 1s infinite;
+}
+
+@keyframes shaking {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  30% {
+    transform: rotate(-8deg);
+  }
+
+  50% {
+    transform: rotate(8deg);
+  }
+
+  75% {
+    transform: rotate(-8deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
 }
 
 .gridDiv {
