--- a/frontend/mgmg-project/src/styles/diary/DiaryStyle.css
+++ b/frontend/mgmg-project/src/styles/diary/DiaryStyle.css
@@ -1,5 +1,5 @@
 .outDiv {
-  background-color: rgba(255, 255, 255, 0.7);
+  /* background-color: rgba(255, 255, 255, 0.7); */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,7 +8,7 @@
 .diaryWriteTop {
   background-size: 100% 100%;
   height: 100%;
-  flex-basis: 12vh;
+  flex-basis: 15vh;
 }
 
 .diaryDetailTop {
@@ -386,6 +386,12 @@ hr {
     width: 10px;
   }
 
+  .diaryWriteTop {
+    background-size: 100% 100%;
+    height: 100%;
+    flex-basis: 8vh;
+  }
+
   .microButton {
     bottom: 5%;
     right: 10%;
@@ -405,14 +411,14 @@ hr {
   }
 
   .diarymiddle {
-    flex-basis: 46vh;
+    flex-basis: 50vh;
     position: relative;
     background-repeat: repeat-y;
     background-size: contain;
   }
 
   .diarymiddleImg {
-    flex-basis: 27vh;
+    flex-basis: 28vh;
     position: relative;
     background-repeat: repeat-y;
     background-size: contain;
@@ -425,7 +431,7 @@ hr {
   .diarybottom {
     background-size: 100% 100%;
     height: 100%;
-    flex-basis: 10vh;
+    flex-basis: 6vh;
     display: flex;
     flex-direction: column;
     align-items: center;
