[FE/YS]Design : 일기 선물추천 부분 css 수정

--- a/frontend/mgmg-project/src/styles/diary/GiftRecommend.css
+++ b/frontend/mgmg-project/src/styles/diary/GiftRecommend.css
@@ -15,8 +15,8 @@
 }
 
 .giftBoxDiv {
-  height: 30vh;
   display: flex;
+  flex-basis: 15vh;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -134,7 +134,6 @@
   }
 
   .giftBoxDiv {
-    height: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
