--- a/frontend/mgmg-project/src/styles/App.css
+++ b/frontend/mgmg-project/src/styles/App.css
@@ -33,6 +33,21 @@ body::-webkit-scrollbar {
   max-width: 80vw;
 }
 
+.download_btn {
+  display: flex;
+  justify-content: flex-start;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 5px 20px;
+  color: rgb(76, 76, 81);
+  border-radius: 30px;
+  font-size: 20px;
+  font-family: "EF_Diary";
+  align-items: center;
+}
+
 @media (max-width: 1199px) {
   .app_view {
     max-width: 85vw;
